Sponsor and workshop updated
Updated Sponsors, Added workshops and Updated Community Events.

--- a/src/pages/speakers.mdx
+++ b/src/pages/speakers.mdx
@@ -15,7 +15,6 @@ import danmillerImage from "../components/SpeakerImages/dan-miller";
 import diegoImage from "../components/SpeakerImages/diego";
 import dustinImage from "../components/SpeakerImages/dustin";
 import jessieImage from "../components/SpeakerImages/jessie-barnett";
-import georgeImage from "../components/SpeakerImages/george";
 import joeericksonImage from "../components/SpeakerImages/joe-erickson";
 import marcPoulinImage from "../components/SpeakerImages/marc-poulin";
 import martineImage from "../components/SpeakerImages/martine";
@@ -35,6 +34,7 @@ import dimitryImage from "../components/SpeakerImages/dimitry";
 import chrisHollandImage from "../components/SpeakerImages/chrisholland";
 import margeauxImage from "../components/SpeakerImages/margeaux";
 import vinceImage from "../components/SpeakerImages/vince";
+import jyotsnaImage from "../components/SpeakerImages/jyotsna-gupta";
 import { Hidden } from '../components/Hidden';
 
 <Hidden as="h1">Speakers</Hidden>
@@ -147,12 +147,12 @@ company="Qntfy"
 bio="Jessie developed a passion for programming after teaching herself HTML, CSS, and JavaScript to make her own Sailor Moon fan site in fifth grade. She began her professional career in IT 8 years ago working with legacy ColdFusion applications and currently spends most of her time working with Golang and Node.js. She has a passion for clean architecture, software quality, and API design. She loves learning new libraries and programming paradigms."
  />
 
-<Speaker name="George Mandis" Image={georgeImage} talk={{ title: "Going the Distance with SVG, Headless & Serverless", 
-description: "Running apps without servers and browsers without screens sounds a little absurd, but it can be a surprisingly efficient way to solve certain problems. In this talk George will discuss a real-world solution built on top of serverless technologies and Puppeteer the Headless Chrome Node API to work with the SVG DOM on-the-fly and create print-ready documents from GPS routes. The audience will get a firsthand look at how cutting-edge JavaScript technologies and language features were integrated with a preexisting legacy PHP backend and minimal casualties" }} 
-twitter="georgemandis" 
-linkedin="georgemandis" 
-company="SnapTortoise" 
-bio="George Mandis is a Google Developer Expert in web technologies and independent full stack web developer & consultant at SnapTortoise. He has worked with startups, professional sports teams, small businesses and individuals but excels at helping people find elegant solutions for their projects. He spent a year living as a digital nomad, inadvertently cheated at a marathon in North Korea and has spoken and led workshops at a number of JavaScript & technology conferences including JSFoo, Teardown, HolyJS and FullStack London."
+<Speaker name="Jyotsna Gupta" Image={jyotsnaImage} talk={{ title: "Building cross-platform browser add-ons using Web Extension API", 
+description: "Browser Add-ons can extend and modify the functionality of a browser. They help us to personalize the browser as per our need. I will be walking through some of the existing add-ons to outline the potential of add-ons. Participants will learn how easily they can develop a Firefox or Chrome add-on or port Firefox add-on to other browsers(Chrome, Opera, Edge,etc.) by having basic knowledge of JavaScript using WebExtensions API." }} 
+twitter="imJenal" 
+linkedin="jyotsna17gupta" 
+company="CoffeeBeans" 
+bio="Jyotsna is an Open Source Enthusiast, working as a Software Developer in CoffeeBeans, Bangalore. She is a TechSpeaker at Mozilla and volunteers to Mozilla in her free time as an Add-on Content Reviewer & Add-ons Featured Advisory Board Member. She has served on the judging panel for the Firefox Quantum Extensions Challenge. She is also a Firefox Add-ons Mentor and has published a privacy-themed add-on PrivateX. For her contributions to Mozilla, her name is also listed in about:credits and the credits page of every shipped Firefox browser. She energizes herself by playing Badminton, TT, Carrom, Chess, and Basketball. She prefers to spend most of the time in her room, else she feels to travel the world. If you do not see her doing any of the above, then you will find probably find her sleeping and dreaming for hours, maybe day"
  />
 
 <Speaker name="Joe Erickson" Image={joeericksonImage} talk={{ title: "Create Your Own HTML Tags with Vue and Web Components", 
