--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -7,15 +7,10 @@ import Text from "../components/Text";
 
 ## Community Events
 
-Click on the links to RSVP for our May Events
+Click on the links to RSVP for our June Events
 
-<Text my={20}>05.14.2019 <a href="https://www.eventbrite.com/e/get-to-know-all-about-progressive-web-applications-tickets-60485201867" target="_blank">Get to know all about Progressive Web Applications</a></Text>
+<Text my={20}>06.11.2019 <a href="https://www.eventbrite.com/e/machine-learning-and-genetic-algorithms-no-magic-only-practicals-tickets-62782984597" target="_blank">Machine Learning and Genetic Algorithms - No Magic only Practicals!!</a></Text>
 
-
-<Text my={20}>05.16.2019 <a href="https://www.eventbrite.com/e/javascript-and-friends-angular-study-group-tickets-59415249611" target="_blank">JavaScript and Friends Angular Study Group</a></Text>
-
-
-<Text my={20}>05.22.2019 <a href="https://www.meetup.com/Vue-Columbus/events/261141310/" target="_blank"> VueJs Columbus Meetup To be Updated</a></Text>
 
 
 Interested in speaking at our community events reach out to us 
