Updated workshops and updated speakers
Updated Workshop page with UX Workshop and Included new speaker and updated community events.

--- a/src/pages/speakers.mdx
+++ b/src/pages/speakers.mdx
@@ -35,7 +35,9 @@ import chrisHollandImage from "../components/SpeakerImages/chrisholland";
 import margeauxImage from "../components/SpeakerImages/margeaux";
 import vinceImage from "../components/SpeakerImages/vince";
 import jyotsnaImage from "../components/SpeakerImages/jyotsna-gupta";
+import milufranzImage from "../components/SpeakerImages/milu-franz";
 import { Hidden } from '../components/Hidden';
+import Text from "../components/Text";
 
 <Hidden as="h1">Speakers</Hidden>
 <Flex flexDirection="row" flexWrap="wrap" alignItems="center" justifyContent="center" style={{ padding: "2rem", width: "" }}>
@@ -204,6 +206,14 @@ company="HMB"
 bio="Mike has been in software development for over 10 years, working everywhere from top 10 defense contractors, small privately owned companies, freelance, and the world of consulting."
  />
 
+<Speaker name="Milu Franz" Image={milufranzImage} talk={{ title: "Pros and Cons of Using VueJS vs ReactJS", 
+description: "Vue has recently gained significant attention and many developers proficient in React JS are contemplating learning Vue JS as a new skillset. Being so similar in scope, the speakers goal is to provide the audience with enough information about both front-end JavaScript frameworks to facilitate the decision of learning and using either of them in future development projects. In order to achieve this, this presentation will provide a code side-by-side comparison of a simple sign in one-page app created using both VueJS and ReactJS. This comparison will ensure technical accuracy and highlight where one framework outshines the other. Furthermore, this presentation will discuss the similarities and differences of both frameworks in regards to installation, runtime performance, HTML & CSS, scalability, data manipulation, props (passed from parent-to-child and child-to-parent components), event listeners, and available libraries." }} 
+twitter="" 
+linkedin="miluska-franz" 
+company="Mile Two LLC" 
+bio="Milu Franz is an Associate Software Engineer at Mile Two LLC. Milus background as a designer and her pursuance of a computer science degree has allowed her to specialize in taking projects from conception to deployment. In her free time, Milu enjoys lifting heavy weights, practicing Brazilian jiu-jitsu, and baking."
+ />
+
 <Speaker name="Nelida Velazquez" Image={nelidaImage} talk={{ title: "Embrace your Legacy… Code", 
 description: "What is your reaction when you hear the words legacy code? If it is to run away screaming, you are not alone.Developers often tend to focus on the negative aspects of legacy codebases. We think of legacy codebases as boring, outdated, difficult to work with, and overwhelming, and we overlook the opportunity to learn from them. These codebases are full of valuable knowledge and they can teach us to be disciplined, empathetic, and persistent.In this talk I will share ways to approach legacy code with a more constructive attitude and focus on growth. We will also look at techniques to help us better understand and improve our legacy codebases.It is my hope that you will leave feeling excited and empowered to discover the hidden gems that your legacy codebase has to offer." }} 
 twitter="tolkiana" 
@@ -285,8 +295,8 @@ linkedin="vncz"
 company="Stoplight" 
 bio="Vincenzo Chianese is an Italian Software Developer focused on WebAPIs and User Interfaces.He is an Auth0 Ambassador.He has been working for the last years in API Companies such as Apiary, Oracle, LunchBadger; currently he is working for Stoplight. He is also a prolific speaker and always willing to fly for a conference . In his spare time, he maintains different open source projects, including Express Gateway, an open source API Gateway written in Javascript and running on NodeJS."
  />
-###### Speakers subject to change.######
+
 </Flex>
 
-
+###### Speakers subject to change.
 
