--- a/src/pages/workshops.mdx
+++ b/src/pages/workshops.mdx
@@ -6,7 +6,7 @@ import Speaker from "../components/Speaker";
 import michealImage from "../components/SpeakerImages/michaelperry";
 import ryanImage from "../components/SpeakerImages/ryan";
 import scottsanImage from "../components/SpeakerImages/scottsan";
-
+import felesiaImage from "../components/SpeakerImages/felesia";
 import { Hidden } from '../components/Hidden';
 
 <Hidden as="h1">Workshops</Hidden>
@@ -20,6 +20,13 @@ Will be conducted on Aug-01-2019 at Improving , Columbus Office from 8 AM to 4 P
 
 <Flex flexDirection="row" flexWrap="wrap" alignItems="center" justifyContent="center" style={{ padding: "2rem", width: "" }}>
 
+<Speaker name="Felesia McDonald" Image={felesiaImage} talk={{ title: "UX Workshop for Developers", 
+description: "Did you know that UX Design is not just about the look and feel of an application? There is real data that drives design decisions. During the 4 hour UX workshop, I will introduce you to UX Design and how it applies to developers. You will become familiar with basic UX Design terminology, best practices (including accessibility) and how UX fits into an Agile environment. The workshop will also include a hands-on group design activity that will include user testing. The workshop is designed to teach developers an understanding of UX best practices and how to collaborate with designers. The goal at the end of the workshop is for you to have a better understanding of the UX process any why UX and develop collaboration is essential to application development."}} 
+twitter="felesiadenon" 
+linkedin="felesiajackson" 
+company="OEConnection" 
+bio="I am a full-time UX Designer at OEC in Richfield, Ohio with over 10 years of experience. I received my MS degree from Kent State in UX Design where I am also an Adjunct Instructor. I was a speaker at World IA Day at Kent and also a UX workshop facilitator sponsored by Kent State. I believe that through collaboration with UX Design developers and build applications that are both functional and user friendly."
+ /> 
 
 <Speaker name="Michael L Perry" Image={michealImage} talk={{ title: "Your First PWA", 
 description: "Progressive Web Apps bridge the gap between web sites and mobile applications. They are easy to install from any browser, work offline, and provide a faster, more native experience. Unfortunately, the patterns and APIs needed to build them are quite low level and difficult to get right. Thankfully, we have tools to make that job easier. Using Node, Webpack, TypeScript, React, and Jinaga, you can have your first PWA up and running in an afternoon. And what a fun afternoon it will be! Open up your Windows or Mac laptop and fire up your favorite Linux terminal. Use Node to bring in Webpack and TypeScript. Pop open your text editor of choice (Visual Studio Code strongly recommended) and start slinging some React and Jinaga code. Together, we will build a conference app that any show would be proud to show off. Design a data model that can be stored on the device and in the could, Present that data on a gloriously responsive interface, Cache sessions offline to cope with bad conference WiFi, Receive updates and notifications from conference organizers, Collaborate with other attendees through social media integration. Not every web site should be a Progressive Web App. But some of them should. Learn the skills to build them better."}} 
@@ -49,5 +56,7 @@ bio="Owner at Black Mutt Media, LLC. Scott Sanzenbacher is a web and mobile appl
 
 
 </Flex>
-###### Speakers subject to change.######
+###### Speakers subject to change.
+
+
 
