--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -11,6 +11,8 @@ Click on the links to RSVP for our June Events
 
 <Text my={20}>06.11.2019 <a href="https://www.eventbrite.com/e/machine-learning-and-genetic-algorithms-no-magic-only-practicals-tickets-62782984597" target="_blank">Machine Learning and Genetic Algorithms - No Magic only Practicals!!</a></Text>
 
+<Text my={20}>06.20.2019 <a href="https://www.eventbrite.com/e/ionic-for-40-everyone-tickets-63001350736" target="_blank">Ionic for (4.0) Everyone</a></Text>
+
 
 
 Interested in speaking at our community events reach out to us 
