Updated Community Events page
Included Vue Columbus meetup group event and included mailing list subscribe links

--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -13,12 +13,14 @@ Click on the links to RSVP for our June Events
 
 <Text my={20}>06.20.2019 <a href="https://www.eventbrite.com/e/ionic-for-40-everyone-tickets-63001350736" target="_blank">Ionic for (4.0) Everyone</a></Text>
 
+<Text my={20}>06.26.2019 <a href="https://www.meetup.com/Vue-Columbus/events/262132413/" target="_blank">NativScript Vue Workshop</a></Text>
+
 
 
 Interested in speaking at our community events reach out to us 
 at <a href="mailto:info@javascriptandfriends.com">info@javascriptandfriends.com</a>
 
-
+<a href="http://eepurl.com/gubqeb" target="_blank">Subscribe </a>to our mailing list for updates. 
 
 
 </Card>
