--- a/src/pages/speakers.mdx
+++ b/src/pages/speakers.mdx
@@ -38,10 +38,22 @@ import jyotsnaImage from "../components/SpeakerImages/jyotsna-gupta";
 import milufranzImage from "../components/SpeakerImages/milu-franz";
 import { Hidden } from '../components/Hidden';
 import Text from "../components/Text";
+import { Link as ButtonLink } from "../components/Button";
 
 <Hidden as="h1">Speakers</Hidden>
-<Flex flexDirection="row" flexWrap="wrap" alignItems="center" justifyContent="center" style={{ padding: "2rem", width: "" }}>
 
+<Flex flexDirection="row" flexWrap="wrap" alignItems="center" justifyContent="center" style={{ padding: "2rem", width: "" }}>
+<ButtonLink
+            href="https://www.eventbrite.com/e/javascript-and-friends-conference-registration-60880128102"
+            alignSelf="center"
+            mr={40}
+            target="_blank" rel="noopener noreferrer"
+          >
+            REGISTER
+          </ButtonLink>          
+</Flex>        
+
+<Flex flexDirection="row" flexWrap="wrap" alignItems="center" justifyContent="center" style={{ padding: "2rem", width: "" }}>
 <Speaker name="Alison Falk" Image={alisonfalkImage} talk={{ title: "Sextech- A Valid and Important Technical Field", 
 description: "When it comes to sextech, people often let their imaginations get in the way of the facts. One common reason is that the media likes to focus primarily on VR porn and bang-able robots. In reality these subjects are just a small uncommon sliver on the sextech spectrum. Sextech spans everything from menopause technology and sex ed apps for teens to teledildonics and erotica audiobooks.\r\n\r\nYou encounter it when you use an app to track your menstrual cycle, talk to an A.I. OBGYN chatbot, or simply viewing adult content.\r\n\r\nIn this talk I\'ll describe:\r\n\u2022 briefly what sextech is and is not\r\n\r\n\u2022 the current biases sextech faces and how it detrimentally impacts marginalized groups, leads to sexual abuse and stifles innovation within the industry \r\n\r\n\u2022 why sextech is the most lucrative sector of technology based on growth statistics, use-cases and the human experience.\r\n\r\n\u2022 why adding \u201Ctech\" to the end of \u201Csex\u201D gives us \u201Cpermission\u201D to start dialogue on a taboo topic. The tech sector is uniquely positioned to remove the stigma surrounding one of the most common human experiences, and this is important for eliminating the professional risk associated with working in sextech. Technology enables bright minds to come forward and provide real world solutions to things like human trafficking, STIs, sexual assault, sex-ed, and more.\r\n\r\n\u2022 why being informed on the subject will make you a more well-rounded inclusive technologist and advocate for a more diverse and progressive tech industry"}} 
 twitter="alisonfalkpgh" linkedin="alison-falk" company="Women In Technology Pittsburgh" 
@@ -153,7 +165,7 @@ bio="Jessie developed a passion for programming after teaching herself HTML, CSS
 description: "Browser Add-ons can extend and modify the functionality of a browser. They help us to personalize the browser as per our need. I will be walking through some of the existing add-ons to outline the potential of add-ons. Participants will learn how easily they can develop a Firefox or Chrome add-on or port Firefox add-on to other browsers(Chrome, Opera, Edge,etc.) by having basic knowledge of JavaScript using WebExtensions API." }} 
 twitter="imJenal" 
 linkedin="jyotsna17gupta" 
-company="CoffeeBeans" 
+company="CoffeeBeans,  Mozilla Techspeaker" 
 bio="Jyotsna is an Open Source Enthusiast, working as a Software Developer in CoffeeBeans, Bangalore. She is a TechSpeaker at Mozilla and volunteers to Mozilla in her free time as an Add-on Content Reviewer & Add-ons Featured Advisory Board Member. She has served on the judging panel for the Firefox Quantum Extensions Challenge. She is also a Firefox Add-ons Mentor and has published a privacy-themed add-on PrivateX. For her contributions to Mozilla, her name is also listed in about:credits and the credits page of every shipped Firefox browser. She energizes herself by playing Badminton, TT, Carrom, Chess, and Basketball. She prefers to spend most of the time in her room, else she feels to travel the world. If you do not see her doing any of the above, then you will find probably find her sleeping and dreaming for hours, maybe day"
  />
 
