Removing company from Jessie Barnett

--- a/src/pages/speakers.mdx
+++ b/src/pages/speakers.mdx
@@ -157,7 +157,7 @@ bio="Dustin started his professional career in IT 5 years ago, working primilari
 description: "gRPC can help minimize the barrier of cross system communication by providing language-agnostic API definitions, backwards and forwards compatible versioning with protocol buffers, and pluggable load balancing and tracing. You will see how to quickly get up and running with the gRPC framework using Node.js from creating a protocol definition, creating meaningful health checks, and securing the endpoint. Additionally, this session will go over best practices and how to take full advantage of what gRPC has to offer" }} 
 twitter="" 
 linkedin="jessiebarnett" 
-company="Qntfy" 
+company="" 
 bio="Jessie developed a passion for programming after teaching herself HTML, CSS, and JavaScript to make her own Sailor Moon fan site in fifth grade. She began her professional career in IT 8 years ago working with legacy ColdFusion applications and currently spends most of her time working with Golang and Node.js. She has a passion for clean architecture, software quality, and API design. She loves learning new libraries and programming paradigms."
  />
 
