Updated community events
Updated July Community Events

--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -7,13 +7,13 @@ import Text from "../components/Text";
 
 ## Community Events
 
-Click on the links to RSVP for our June Events
+Click on the links to RSVP for our July Events
 
-<Text my={20}>06.11.2019 <a href="https://www.eventbrite.com/e/machine-learning-and-genetic-algorithms-no-magic-only-practicals-tickets-62782984597" target="_blank">Machine Learning and Genetic Algorithms - No Magic only Practicals!!</a></Text>
+<Text my={20}>07.09.2019 <a href="https://www.eventbrite.com/e/intro-to-rxjs-and-firebase-tickets-64553341783" target="_blank" rel="noopener noreferrer">Intro to RxJs and Firebase</a></Text>
 
-<Text my={20}>06.20.2019 <a href="https://www.eventbrite.com/e/ionic-for-40-everyone-tickets-63001350736" target="_blank">Ionic for (4.0) Everyone</a></Text>
+<Text my={20}>07.18.2019 <a href="" target="_blank" rel="noopener noreferrer">Details to be Updated</a></Text>
 
-<Text my={20}>06.26.2019 <a href="https://www.meetup.com/Vue-Columbus/events/262132413/" target="_blank">NativScript Vue Workshop</a></Text>
+<Text my={20}>07.24.2019 <a href="https://www.meetup.com/Vue-Columbus/events/jgbfwqyzkbgc/" target="_blank" rel="noopener noreferrer">Vue - Wired for success</a></Text>
 
 
 
