Updated speakers page , workshop and community events
Updated speakers page with Diana. Removed old images and included Vue Vixens workshop details in Community Events.

--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -15,6 +15,7 @@ Click on the links to RSVP for our July Events
 
 <Text my={20}>07.24.2019 <a href="https://www.meetup.com/Vue-Columbus/events/jgbfwqyzkbgc/" target="_blank" rel="noopener noreferrer">Vue - Wired for success</a></Text>
 
+<Text my={20}>08.01.2019 <a href="https://vuevixens.org/events/javascript-friends-conference-2019" target="_blank" rel="noopener noreferrer">Vue Vixens Full Day Workshop</a></Text>
 
 
 Interested in speaking at our community events reach out to us 
